# Executive-Overlord

./: .gitignore  .gitmodules  README.md  build.sh  startup.sh
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
include/Battery_Management/: Latest_gtest_output.txt  package.xml  testingScript.sh
include/Battery_Management/BatteryMonitor/: main.cpp
modules/Thrust-Control/include/Command_Interpreter/src/: Command.hpp
ros2_ws/src/scripts/: build.sh  run.sh
script/: build.sh  build_and_run_tests.sh  clean.sh  init.sh  mock_pi_build.sh  pi_build.sh  repeat_init.sh  run.sh  runTests.sh  runWaypoint.sh  run_cltool.sh  run_dvl.sh  run_state_saver.sh  run_thrust_control.sh  startup.sh  test_mock_pi.sh
scripts/: build.sh
src/Battery_Management/: .gitignore  CMakeLists.txt
src/Battery_Management/BatteryMonitor/: BatteryMonitor.cpp  BatteryMonitor.hpp
src/install/: local_setup.sh  setup.sh
src/install/crs_ros2_interfaces/lib/crs_ros2_interfaces/: publish_pwm_cmd
src/install/crs_ros2_interfaces/share/crs_ros2_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/crs_ros2_interfaces/share/crs_ros2_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  crs_ros2_interfacesConfig.cmake  crs_ros2_interfaces__rosidl_typesupport_cExport.cmake  (+9 more)
src/install/pwm_cltool/lib/pwm_cltool/: pwm_cltool_node
src/install/pwm_cltool/share/pwm_cltool/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/log/: latest_build
(+14 files in other folders)
